cargo-features = ["profile-rustflags"]

[package]
name = "dprint-plugin-imporg"
version = "0.1.6"
authors = ["Balthild <ibalthild@gmail.com>"]
edition = "2021"
keywords = ["import", "formatter", "typescript", "javascript"]
license = "MPL-2.0"
description = "TypeScript and JavaScript import organizer."
repository = "https://github.com/balthild/dprint-plugin-imporg"

[lib]
name = "plugin"
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
rustflags = ["-Zlocation-detail=none"]

[dependencies]
anyhow = "1.0.89"
dprint-core = { version = "0.67.1", features = ["wasm"] }
oxc = "0.30.1"
regex = "1.10.6"
ropey = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_path_to_error = "0.1.16"
